--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>PuppyBowl</title>
-    <script src="./script.js" defer></script>
-  </head>
-  <body>
-    <form id="new-player-form"></form>
+</head>
+
+<body>
+    <h1>PUPPY BOWL ROSTER</h1>
+    
+    <form id="new-player-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
+
+        <label for="breed">Breed:</label>
+        <input type="text" id="breed" name="breed" required />
+
+        <label for="image">Image URL:</label>
+        <input type="text" id="image" name="image" required />
+
+        <button type="submit">Add Player</button>
+    </form>
     <main></main>
-  </body>
+    <script src="./script.js"></script>
+</body>
+
 </html>
